--- a/index.html
+++ b/index.html
@@ -4,22 +4,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./icons/favicon.svg">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Landing page</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container">
-
+            <div class="header__wrapper">
+                <a class="logo" href="#">Header Logo</a>
+                <nav class="navigation">
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
-    </main>
-    <footer>
-        <div class="container">
+        <section class="promo">
+            <div class="container">
+                <div class="promo__wrapper">
+                    <div class="promo__content">
+                        <h1 class="title">This website is awesome</h1>
+                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem enim laboriosam
+                            deserunt a
+                            minima delectus harum rem non quo pariatur officia veniam ratione, officiis obcaecati nisi
+                            temporibus, vitae quisquam nostrum.</p>
+                        <button class="button">
+                            Sign up
+                        </button>
+                    </div>
+                    <div class="promo__image">
+                        <img src="./images/luca-bravo.jpg" alt="promo image">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        </div>
+        <section class="info">
+            <div class="container">
+                <h2 class="subtitle">Some random information</h2>
+                <div class="cards info__cards">
+                    <figure class="card">
+                        <img src="./icons/card.svg" alt="card image">
+                        <figcaption>this is some subtext under an illustration or image</figcaption>
+                    </figure>
+                    <figure class="card">
+                        <img src="./icons/card.svg" alt="card image">
+                        <figcaption>this is some subtext under an illustration or image</figcaption>
+                    </figure>
+                    <figure class="card">
+                        <img src="./icons/card.svg" alt="card image">
+                        <figcaption>this is some subtext under an illustration or image</figcaption>
+                    </figure>
+                    <figure class="card">
+                        <img src="./icons/card.svg" alt="card image">
+                        <figcaption>this is some subtext under an illustration or image</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
+
+        <section class="quote">
+            <div class="container">
+                <blockquote class="quote__content">
+                    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+                        or maybe people will actually read it. Who knows? All i know is </p>
+                    <cite>- Thor, God of Thunder</cite>
+                </blockquote>
+            </div>
+        </section>
+
+        <section class="sign-up">
+            <div class="container">
+                <div class="sign-up__wrapper">
+                    <div class="sign-up__content">
+                        <h3>Call to action! It's time!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button class="button">Sign up</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <p>Copyright &copy; The Odin Project 2023</p>
+        <span>Created by</span>
+        <a href="https://github.com/pav-nk">pav_nk</a>
     </footer>
 </body>
 
